--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
+    "imask": "^7.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-imask": "^7.6.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.2",
     "recharts": "^2.15.3"
   },
