--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-imask": "^7.6.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.2",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
